Fix displaying and copying whitespaces in result

--- a/regex-generator-web/src/main/resources/regex-generator.css
+++ b/regex-generator-web/src/main/resources/regex-generator.css
@@ -120,3 +120,7 @@ form * .rg-check-row {
   margin: 0;
   background-color: white;
 }
+
+#rg_result_display {
+  white-space: pre;
+}
